FIX BUG: -Every website visit is squished to the left side

--- a/project_folder/templates/style.css
+++ b/project_folder/templates/style.css
@@ -1,4 +1,4 @@
-body {
+body.myExtension{
   width: 450px;
   height: 200px;
   margin: 0;
